# QtToDoList

./: CMakeLists.txt  listfiltermodel.cpp  listfiltermodel.h  listmodel.cpp  listmodel.h  main.cpp  taskmodel.cpp  taskmodel.h  todofiltermodel.cpp  todofiltermodel.h  todomodel.cpp  todomodel.h
qml/: Main.qml
qml/customcomponents/: ActiveTasksComponent.qml.autosave  ConfirmButton.qml  InputField.qml  TextButton.qml
qml/screens/: EditListScreen.qml  HomeScreen.qml  HomeScreen.qml.autosave  ToDoListScreen.qml
